--- a/mail/server/mailserver/compose.yaml
+++ b/mail/server/mailserver/compose.yaml
@@ -23,27 +23,27 @@ services:
             - mailserver-mail-logs:/var/log/mail/
             - mailserver-config:/tmp/docker-mailserver/
         labels:
-            - "traefik.enable=true"
-            - "traefik.tcp.services.mailserver-port25.loadbalancer.server.port=25"
-            - "traefik.tcp.routers.mailserver-port25.rule=HostSNI(`${DOMAIN:-mailserver.localhost}`)"
-            - "traefik.tcp.routers.mailserver-port25.entrypoints=mailserver-port25"
-            - "traefik.tcp.routers.mailserver-port25.tls=true"
-            - "traefik.tcp.routers.mailserver-port25.service=mailserver-port25"
-            - "traefik.tcp.services.mailserver-port465.loadbalancer.server.port=465"
-            - "traefik.tcp.routers.mailserver-port465.rule=HostSNI(`${DOMAIN:-mailserver.localhost}`)"
-            - "traefik.tcp.routers.mailserver-port465.entrypoints=mailserver-port465"
-            - "traefik.tcp.routers.mailserver-port465.tls=true"
-            - "traefik.tcp.routers.mailserver-port465.service=mailserver-port465"
-            - "traefik.tcp.services.mailserver-port587.loadbalancer.server.port=587"
-            - "traefik.tcp.routers.mailserver-port587.rule=HostSNI(`${DOMAIN:-mailserver.localhost}`)"
-            - "traefik.tcp.routers.mailserver-port587.entrypoints=mailserver-port587"
-            - "traefik.tcp.routers.mailserver-port587.tls=true"
-            - "traefik.tcp.routers.mailserver-port587.service=mailserver-port587"
-            - "traefik.tcp.services.mailserver-port993.loadbalancer.server.port=993"
-            - "traefik.tcp.routers.mailserver-port993.rule=HostSNI(`${DOMAIN:-mailserver.localhost}`)"
-            - "traefik.tcp.routers.mailserver-port993.entrypoints=mailserver-port993"
-            - "traefik.tcp.routers.mailserver-port993.tls=true"
-            - "traefik.tcp.routers.mailserver-port993.service=mailserver-port993"
+            traefik.enable: "true"
+            traefik.tcp.services.mailserver-port25.loadbalancer.server.port: "25"
+            traefik.tcp.routers.mailserver-port25.rule: "HostSNI(`${DOMAIN:-mailserver.localhost}`)"
+            traefik.tcp.routers.mailserver-port25.entrypoints: "mailserver-port25"
+            traefik.tcp.routers.mailserver-port25.tls: "true"
+            traefik.tcp.routers.mailserver-port25.service: "mailserver-port25"
+            traefik.tcp.services.mailserver-port465.loadbalancer.server.port: "465"
+            traefik.tcp.routers.mailserver-port465.rule: "HostSNI(`${DOMAIN:-mailserver.localhost}`)"
+            traefik.tcp.routers.mailserver-port465.entrypoints: "mailserver-port465"
+            traefik.tcp.routers.mailserver-port465.tls: "true"
+            traefik.tcp.routers.mailserver-port465.service: "mailserver-port465"
+            traefik.tcp.services.mailserver-port587.loadbalancer.server.port: "587"
+            traefik.tcp.routers.mailserver-port587.rule: "HostSNI(`${DOMAIN:-mailserver.localhost}`)"
+            traefik.tcp.routers.mailserver-port587.entrypoints: "mailserver-port587"
+            traefik.tcp.routers.mailserver-port587.tls: "true"
+            traefik.tcp.routers.mailserver-port587.service: "mailserver-port587"
+            traefik.tcp.services.mailserver-port993.loadbalancer.server.port: "993"
+            traefik.tcp.routers.mailserver-port993.rule: "HostSNI(`${DOMAIN:-mailserver.localhost}`)"
+            traefik.tcp.routers.mailserver-port993.entrypoints: "mailserver-port993"
+            traefik.tcp.routers.mailserver-port993.tls: "true"
+            traefik.tcp.routers.mailserver-port993.service: "mailserver-port993"
 
 networks:
     main:
