--- a/reverse-proxy/traefik/compose.example.yaml
+++ b/reverse-proxy/traefik/compose.example.yaml
@@ -10,29 +10,29 @@ services:
         networks:
             main:
         labels:
-            - "traefik.enable=true"
-            - "traefik.http.services.whoami.loadbalancer.server.port=80"
-            - "traefik.http.routers.whoami.rule=Host(`${DOMAIN:-whoami.localhost}`)"
-            - "traefik.http.routers.whoami.entrypoints=http"
-            - "traefik.http.routers.whoami.tls=false"
-            - "traefik.http.routers.whoami.service=whoami"
-            # - "traefik.http.routers.whoami-secure.rule=Host(`${DOMAIN:-whoami.localhost}`)"
-            # - "traefik.http.routers.whoami-secure.entrypoints=https"
-            # - "traefik.http.routers.whoami-secure.tls=true"
-            # - "traefik.http.routers.whoami-secure.service=whoami"
-            # - "traefik.http.routers.wildcard-whoami.rule=HostRegexp(`.+\\.whoami\\.localhost`)"
-            # - "traefik.http.routers.wildcard-whoami.entrypoints=http"
-            # - "traefik.http.routers.wildcard-whoami.tls=false"
-            # - "traefik.http.routers.wildcard-whoami.service=whoami"
-            # - "traefik.http.routers.wildcard-whoami-secure.rule=HostRegexp(`.+\\.whoami\\.localhost`)"
-            # - "traefik.http.routers.wildcard-whoami-secure.entrypoints=https"
-            # - "traefik.http.routers.wildcard-whoami-secure.tls=true"
-            # - "traefik.http.routers.wildcard-whoami-secure.service=whoami"
-            # - "traefik.http.services.whoami-port8080.loadbalancer.server.port=8080"
-            # - "traefik.http.routers.whoami-port8080.rule=Host(`${DOMAIN:-whoami.localhost}`)"
-            # - "traefik.http.routers.whoami-port8080.entrypoints=port8080"
-            # - "traefik.http.routers.whoami-port8080.tls=false"
-            # - "traefik.http.routers.whoami-port8080.service=whoami-port8080"
+            traefik.enable: "true"
+            traefik.http.services.whoami.loadbalancer.server.port: "80"
+            traefik.http.routers.whoami.rule: "Host(`${DOMAIN:-whoami.localhost}`)"
+            traefik.http.routers.whoami.entrypoints: "http"
+            traefik.http.routers.whoami.tls: "false"
+            traefik.http.routers.whoami.service: "whoami"
+            # traefik.http.routers.whoami-secure.rule: "Host(`${DOMAIN:-whoami.localhost}`)"
+            # traefik.http.routers.whoami-secure.entrypoints: "https"
+            # traefik.http.routers.whoami-secure.tls: "true"
+            # traefik.http.routers.whoami-secure.service: "whoami"
+            # traefik.http.routers.wildcard-whoami.rule: "HostRegexp(`.+\\.whoami\\.localhost`)"
+            # traefik.http.routers.wildcard-whoami.entrypoints: "http"
+            # traefik.http.routers.wildcard-whoami.tls: "false"
+            # traefik.http.routers.wildcard-whoami.service: "whoami"
+            # traefik.http.routers.wildcard-whoami-secure.rule: "HostRegexp(`.+\\.whoami\\.localhost`)"
+            # traefik.http.routers.wildcard-whoami-secure.entrypoints: "https"
+            # traefik.http.routers.wildcard-whoami-secure.tls: "true"
+            # traefik.http.routers.wildcard-whoami-secure.service: "whoami"
+            # traefik.http.services.whoami-port8080.loadbalancer.server.port: "8080"
+            # traefik.http.routers.whoami-port8080.rule: "Host(`${DOMAIN:-whoami.localhost}`)"
+            # traefik.http.routers.whoami-port8080.entrypoints: "port8080"
+            # traefik.http.routers.whoami-port8080.tls: "false"
+            # traefik.http.routers.whoami-port8080.service: "whoami-port8080"
 
 networks:
     main:
