--- a/apps/bookstack/compose.yaml
+++ b/apps/bookstack/compose.yaml
@@ -21,16 +21,16 @@ services:
         volumes:
             - bookstack:/config
         labels:
-            - "traefik.enable=true"
-            - "traefik.http.services.bookstack.loadbalancer.server.port=80"
-            - "traefik.http.routers.bookstack.rule=Host(`${DOMAIN:-bookstack.localhost}`)"
-            - "traefik.http.routers.bookstack.entrypoints=http"
-            - "traefik.http.routers.bookstack.tls=false"
-            - "traefik.http.routers.bookstack.service=bookstack"
-            - "traefik.http.routers.bookstack-secure.rule=Host(`${DOMAIN:-bookstack.localhost}`)"
-            - "traefik.http.routers.bookstack-secure.entrypoints=https"
-            - "traefik.http.routers.bookstack-secure.tls=true"
-            - "traefik.http.routers.bookstack-secure.service=bookstack"
+            traefik.enable: "true"
+            traefik.http.services.bookstack.loadbalancer.server.port: "80"
+            traefik.http.routers.bookstack.rule: "Host(`${DOMAIN:-bookstack.localhost}`)"
+            traefik.http.routers.bookstack.entrypoints: "http"
+            traefik.http.routers.bookstack.tls: "false"
+            traefik.http.routers.bookstack.service: "bookstack"
+            traefik.http.routers.bookstack-secure.rule: "Host(`${DOMAIN:-bookstack.localhost}`)"
+            traefik.http.routers.bookstack-secure.entrypoints: "https"
+            traefik.http.routers.bookstack-secure.tls: "true"
+            traefik.http.routers.bookstack-secure.service: "bookstack"
 
 networks:
     main:
