--- a/apps/joplin/compose.yaml
+++ b/apps/joplin/compose.yaml
@@ -20,16 +20,16 @@ services:
         networks:
             main:
         labels:
-            - "traefik.enable=true"
-            - "traefik.http.services.joplin.loadbalancer.server.port=8080"
-            - "traefik.http.routers.joplin.rule=Host(`${DOMAIN:-joplin.localhost}`)"
-            - "traefik.http.routers.joplin.entrypoints=http"
-            - "traefik.http.routers.joplin.tls=false"
-            - "traefik.http.routers.joplin.service=joplin"
-            - "traefik.http.routers.joplin-secure.rule=Host(`${DOMAIN:-joplin.localhost}`)"
-            - "traefik.http.routers.joplin-secure.entrypoints=https"
-            - "traefik.http.routers.joplin-secure.tls=true"
-            - "traefik.http.routers.joplin-secure.service=joplin"
+            traefik.enable: "true"
+            traefik.http.services.joplin.loadbalancer.server.port: "8080"
+            traefik.http.routers.joplin.rule: "Host(`${DOMAIN:-joplin.localhost}`)"
+            traefik.http.routers.joplin.entrypoints: "http"
+            traefik.http.routers.joplin.tls: "false"
+            traefik.http.routers.joplin.service: "joplin"
+            traefik.http.routers.joplin-secure.rule: "Host(`${DOMAIN:-joplin.localhost}`)"
+            traefik.http.routers.joplin-secure.entrypoints: "https"
+            traefik.http.routers.joplin-secure.tls: "true"
+            traefik.http.routers.joplin-secure.service: "joplin"
 
 networks:
     main:
