--- a/db/server/mariadb/compose.yaml
+++ b/db/server/mariadb/compose.yaml
@@ -18,14 +18,15 @@ services:
             - ./docker/mariadb/bin/backup.sh:/bin/backup.sh:ro
             - ${BACKUP_DIR:-${HOME}/data/backups/docker/mariadb}:/backup
         labels:
-            - 'deck-chores.postgres.command="/bin/backup.sh"'
-            - 'deck-chores.postgres.cron="${BACKUP_CRON_EXPRESSION:-9,15,17,21 0 0}"'
-            - "traefik.enable=true"
-            - "traefik.tcp.services.mariadb.loadbalancer.server.port=3306"
-            - "traefik.tcp.routers.mariadb.rule=HostSNI(`${DOMAIN:-mariadb.localhost}`)"
-            - "traefik.tcp.routers.mariadb.entrypoints=mysql"
-            - "traefik.tcp.routers.mariadb.tls=true"
-            - "traefik.tcp.routers.mariadb.service=mariadb"
+            ofelia.enabled: "true"
+            ofelia.job-exec.mariadb.command: "/bin/backup.sh"
+            ofelia.job-exec.mariadb.schedule: "${BACKUP_CRON_EXPRESSION:-0 9,15,17,21 * * *}"
+            traefik.enable: "true"
+            traefik.tcp.services.mariadb.loadbalancer.server.port: "3306"
+            traefik.tcp.routers.mariadb.rule: "HostSNI(`${DOMAIN:-mariadb.localhost}`)"
+            traefik.tcp.routers.mariadb.entrypoints: "mysql"
+            traefik.tcp.routers.mariadb.tls: "true"
+            traefik.tcp.routers.mariadb.service: "mariadb"
 
 networks:
     main:
