--- a/db/server/mysql/compose.yaml
+++ b/db/server/mysql/compose.yaml
@@ -18,14 +18,15 @@ services:
             - ./docker/mysql/bin/backup.sh:/bin/backup.sh:ro
             - ${BACKUP_DIR:-${HOME}/data/backups/docker/mysql}:/backup
         labels:
-            - 'deck-chores.postgres.command="/bin/backup.sh"'
-            - 'deck-chores.postgres.cron="${BACKUP_CRON_EXPRESSION:-9,15,17,21 0 0}"'
-            - "traefik.enable=true"
-            - "traefik.tcp.services.mysql.loadbalancer.server.port=3306"
-            - "traefik.tcp.routers.mysql.rule=HostSNI(`${DOMAIN:-mysql.localhost}`)"
-            - "traefik.tcp.routers.mysql.entrypoints=mysql"
-            - "traefik.tcp.routers.mysql.tls=true"
-            - "traefik.tcp.routers.mysql.service=mysql"
+            ofelia.enabled: "true"
+            ofelia.job-exec.mysql.command: "/bin/backup.sh"
+            ofelia.job-exec.mysql.schedule: "${BACKUP_CRON_EXPRESSION:-0 9,15,17,21 * * *}"
+            traefik.enable: "true"
+            traefik.tcp.services.mysql.loadbalancer.server.port: "3306"
+            traefik.tcp.routers.mysql.rule: "HostSNI(`${DOMAIN:-mysql.localhost}`)"
+            traefik.tcp.routers.mysql.entrypoints: "mysql"
+            traefik.tcp.routers.mysql.tls: "true"
+            traefik.tcp.routers.mysql.service: "mysql"
 
 networks:
     main:
