--- a/db/server/postgres/compose.yaml
+++ b/db/server/postgres/compose.yaml
@@ -18,14 +18,15 @@ services:
             - ./docker/postgres/bin/backup.sh:/bin/backup.sh:ro
             - ${BACKUP_DIR:-${HOME}/data/backups/docker/postgres}:/backup
         labels:
-            - 'deck-chores.postgres.command="/bin/backup.sh"'
-            - 'deck-chores.postgres.cron="${BACKUP_CRON_EXPRESSION:-9,15,17,21 0 0}"'
-            - "traefik.enable=true"
-            - "traefik.tcp.services.postgres.loadbalancer.server.port=5432"
-            - "traefik.tcp.routers.postgres.rule=HostSNI(`${DOMAIN:-postgres.localhost}`)"
-            - "traefik.tcp.routers.postgres.entrypoints=postgres"
-            - "traefik.tcp.routers.postgres.tls=true"
-            - "traefik.tcp.routers.postgres.service=postgres"
+            ofelia.enabled: "true"
+            ofelia.job-exec.postgres.command: "/bin/backup.sh"
+            ofelia.job-exec.postgres.schedule: "${BACKUP_CRON_EXPRESSION:-0 9,15,17,21 * * *}"
+            traefik.enable: "true"
+            traefik.tcp.services.postgres.loadbalancer.server.port: "5432"
+            traefik.tcp.routers.postgres.rule: "HostSNI(`${DOMAIN:-postgres.localhost}`)"
+            traefik.tcp.routers.postgres.entrypoints: "postgres"
+            traefik.tcp.routers.postgres.tls: "true"
+            traefik.tcp.routers.postgres.service: "postgres"
 
 networks:
     main:
