--- a/reverse-proxy/traefik/compose.yaml
+++ b/reverse-proxy/traefik/compose.yaml
@@ -27,10 +27,10 @@ services:
             - ./config/dynamic.yaml:/etc/traefik/dynamic.yaml:ro
             - ./certs:/etc/certs:ro
         labels:
-            - "traefik.enable=true"
+            traefik.enable: "true"
             # traefik.localhost
-            - "traefik.http.routers.traefik.rule=Host(`${DOMAIN:-traefik.localhost}`)"
-            - "traefik.http.routers.traefik.service=api@internal"
+            traefik.http.routers.traefik.rule: "Host(`${DOMAIN:-traefik.localhost}`)"
+            traefik.http.routers.traefik.service: "api@internal"
 
 networks:
     main:
