--- a/apps/bookstack/compose.yaml
+++ b/apps/bookstack/compose.yaml
@@ -21,6 +21,8 @@ services:
         volumes:
             - bookstack:/config
         labels:
+            # caddy: "${DOMAIN:-bookstack.localhost}"
+            # caddy.reverse_proxy: "{{upstreams http}}"
             traefik.enable: "true"
             traefik.http.services.bookstack.loadbalancer.server.port: "80"
             traefik.http.routers.bookstack.rule: "Host(`${DOMAIN:-bookstack.localhost}`)"
