--- a/apps/joplin/compose.yaml
+++ b/apps/joplin/compose.yaml
@@ -20,6 +20,8 @@ services:
         networks:
             main:
         labels:
+            # caddy: "${DOMAIN:-joplin.localhost}"
+            # caddy.reverse_proxy: "{{upstreams 8080}}"
             traefik.enable: "true"
             traefik.http.services.joplin.loadbalancer.server.port: "8080"
             traefik.http.routers.joplin.rule: "Host(`${DOMAIN:-joplin.localhost}`)"
