--- a/apps/open-webui/compose.yaml
+++ b/apps/open-webui/compose.yaml
@@ -15,6 +15,8 @@ services:
         volumes:
             - open-webui:/app/backend/data
         labels:
+            # caddy: "${DOMAIN:-open-webui.localhost}"
+            # caddy.reverse_proxy: "{{upstreams 8080}}"
             traefik.enable: "true"
             traefik.http.services.open-webui.loadbalancer.server.port: "8080"
             traefik.http.routers.open-webui.rule: "Host(`${DOMAIN:-open-webui.localhost}`)"
