--- a/db/client/pgadmin/compose.yaml
+++ b/db/client/pgadmin/compose.yaml
@@ -14,6 +14,8 @@ services:
         volumes:
             - pgadmin:/var/lib/pgadmin
         labels:
+            # caddy: "${DOMAIN:-pgadmin.localhost}"
+            # caddy.reverse_proxy: "{{upstreams http}}"
             traefik.enable: "true"
             traefik.http.services.pgadmin.loadbalancer.server.port: "80"
             traefik.http.routers.pgadmin.rule: "Host(`${DOMAIN:-pgadmin.localhost}`)"
