--- a/db/client/phpmyadmin/compose.yaml
+++ b/db/client/phpmyadmin/compose.yaml
@@ -13,6 +13,8 @@ services:
         networks:
             main:
         labels:
+            # caddy: "${DOMAIN:-phpmyadmin.localhost}"
+            # caddy.reverse_proxy: "{{upstreams http}}"
             traefik.enable: "true"
             traefik.http.services.phpmyadmin.loadbalancer.server.port: "80"
             traefik.http.routers.phpmyadmin.rule: "Host(`${DOMAIN:-phpmyadmin.localhost}`)"
