--- a/db/server/mysql/compose.yaml
+++ b/db/server/mysql/compose.yaml
@@ -21,6 +21,8 @@ services:
             ofelia.enabled: "true"
             ofelia.job-exec.mysql.command: "/bin/backup.sh"
             ofelia.job-exec.mysql.schedule: "${BACKUP_CRON_EXPRESSION:-0 9,15,17,21 * * *}"
+            # caddy: "${DOMAIN:-mysql.localhost}"
+            # caddy.reverse_proxy: "{{upstreams 3306}}"
             traefik.enable: "true"
             traefik.tcp.services.mysql.loadbalancer.server.port: "3306"
             traefik.tcp.routers.mysql.rule: "HostSNI(`${DOMAIN:-mysql.localhost}`)"
