--- a/db/server/mysql5/compose.yaml
+++ b/db/server/mysql5/compose.yaml
@@ -21,6 +21,8 @@ services:
             ofelia.enabled: "true"
             ofelia.job-exec.mysql5.command: "/bin/backup.sh"
             ofelia.job-exec.mysql5.schedule: "${BACKUP_CRON_EXPRESSION:-0 9,15,17,21 * * *}"
+            # caddy: "${DOMAIN:-mysql5.localhost}"
+            # caddy.reverse_proxy: "{{upstreams 3306}}"
             traefik.enable: "true"
             traefik.tcp.services.mysql5.loadbalancer.server.port: "3306"
             traefik.tcp.routers.mysql5.rule: "HostSNI(`${DOMAIN:-mysql5.localhost}`)"
