--- a/db/server/percona5/compose.yaml
+++ b/db/server/percona5/compose.yaml
@@ -21,6 +21,8 @@ services:
             ofelia.enabled: "true"
             ofelia.job-exec.percona5.command: "/bin/backup.sh"
             ofelia.job-exec.percona5.schedule: "${BACKUP_CRON_EXPRESSION:-0 9,15,17,21 * * *}"
+            # caddy: "${DOMAIN:-percona5.localhost}"
+            # caddy.reverse_proxy: "{{upstreams 3306}}"
             traefik.enable: "true"
             traefik.tcp.services.percona5.loadbalancer.server.port: "3306"
             traefik.tcp.routers.percona5.rule: "HostSNI(`${DOMAIN:-percona5.localhost}`)"
