--- a/db/server/postgres/compose.yaml
+++ b/db/server/postgres/compose.yaml
@@ -21,6 +21,8 @@ services:
             ofelia.enabled: "true"
             ofelia.job-exec.postgres.command: "/bin/backup.sh"
             ofelia.job-exec.postgres.schedule: "${BACKUP_CRON_EXPRESSION:-0 9,15,17,21 * * *}"
+            # caddy: "${DOMAIN:-postgres.localhost}"
+            # caddy.reverse_proxy: "{{upstreams 5432}}"
             traefik.enable: "true"
             traefik.tcp.services.postgres.loadbalancer.server.port: "5432"
             traefik.tcp.routers.postgres.rule: "HostSNI(`${DOMAIN:-postgres.localhost}`)"
