--- a/db/server/redis/compose.yaml
+++ b/db/server/redis/compose.yaml
@@ -14,6 +14,8 @@ services:
         volumes:
             - redis-data:/data
         labels:
+            # caddy: "${DOMAIN:-redis.localhost}"
+            # caddy.reverse_proxy: "{{upstreams 6379}}"
             traefik.enable: "true"
             traefik.tcp.services.redis.loadbalancer.server.port: "6379"
             traefik.tcp.routers.redis.rule: "HostSNI(`${DOMAIN:-redis.localhost}`)"
