--- a/db/server/percona5/compose.yaml
+++ b/db/server/percona5/compose.yaml
@@ -18,9 +18,9 @@ services:
             - ./docker/percona5/bin/backup.sh:/bin/backup.sh:ro
             - ${BACKUP_DIR:-${HOME}/data/backups/docker/percona5}:/backup
         labels:
-            ofelia.enabled: "true"
-            ofelia.job-exec.percona5.command: "/bin/backup.sh"
-            ofelia.job-exec.percona5.schedule: "${BACKUP_CRON_EXPRESSION:-0 9,15,17,21 * * *}"
+            # ofelia.enabled: "true"
+            # ofelia.job-exec.percona5.command: "/bin/backup.sh"
+            # ofelia.job-exec.percona5.schedule: "${BACKUP_CRON_EXPRESSION:-0 9,15,17,21 * * *}"
             # caddy: "${DOMAIN:-percona5.localhost}"
             # caddy.reverse_proxy: "{{upstreams 3306}}"
             traefik.enable: "true"
