--- a/db/server/postgres/compose.yaml
+++ b/db/server/postgres/compose.yaml
@@ -18,9 +18,9 @@ services:
             - ./docker/postgres/bin/backup.sh:/bin/backup.sh:ro
             - ${BACKUP_DIR:-${HOME}/data/backups/docker/postgres}:/backup
         labels:
-            ofelia.enabled: "true"
-            ofelia.job-exec.postgres.command: "/bin/backup.sh"
-            ofelia.job-exec.postgres.schedule: "${BACKUP_CRON_EXPRESSION:-0 9,15,17,21 * * *}"
+            # ofelia.enabled: "true"
+            # ofelia.job-exec.postgres.command: "/bin/backup.sh"
+            # ofelia.job-exec.postgres.schedule: "${BACKUP_CRON_EXPRESSION:-0 9,15,17,21 * * *}"
             # caddy: "${DOMAIN:-postgres.localhost}"
             # caddy.reverse_proxy: "{{upstreams 5432}}"
             traefik.enable: "true"
